--- a/app/client/index.html
+++ b/app/client/index.html
@@ -18,12 +18,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-
+    <!-- JQuery --> 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>    
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
-    <script src="js/loadAbi.js"> </script>
-    <script type="text/javascript" src="./node_modules/truffle-contract/dist/truffle-contract.js"></script>
+
 </head>
 <body>
 
@@ -31,6 +29,7 @@
         <div id="div-top" class="row">
             <div id="div-common" class="col-8">
                 <h2> Common </h2>
+                <p> Some common stuff here! </p>
             </div>
             <div id="div-general" class="col-4">
                 <h2> General </h2>
@@ -38,31 +37,11 @@
         </div>
 
         <div id="div-content" class="row">
-            <div id="div-clients" class="col-8">
-                <div class="row"> 
-                    <div class="col client-div" data-client-id="0">
-                        <h2> Client 0</h2>
-                        <input type="radio" name="client" value="0" checked />
-                        <div>
-                            <em> Account ID </em> <span id="account_id">  </span>
-                        </div>
-                    </div>
-                    <div class="col client-div" data-client-id="1">
-                        <h2> Client 1</h2>
-                        <input type="radio" name="client" value="1"/>
-                        <div>
-                            <em> Account ID </em> <span id="account_id">  </span>
-                        </div>
-                    </div>
-                    <div class="col client-div" data-client-id="2">
-                        <h2> Client 2</h2>
-                        <input type="radio" name="client" value="2"/>
-                        <div>
-                            <em> Account ID </em> <span id="account_id">  </span>
-                        </div>
-                    </div>
-                </div>
+            
+            <div id="clients-container" class="col-8"> 
+                <!-- Populated by React module --> 
             </div>
+
             <div id="div-api" class="col-4">
                 <h2> API </h2>
                 <div>
@@ -75,7 +54,21 @@
         </div>
     </div> <!-- container --> 
 
-<script src="js/main.js"></script>
+
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    
+    <!-- Ethereum stuff --> 
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>    
+    <script type="text/javascript" src="./node_modules/truffle-contract/dist/truffle-contract.js"></script>
+
+    <!-- Load our scripts -->
+    <script src="js/loadAbi.js"> </script>
+    <script type="text/babel" src="js/client.js"></script>
+    <script src="js/main.js"> </script>
 
 </body>
 </html>
