Use local bootstrap instead of one from CDN

--- a/app/client/public/index.html
+++ b/app/client/public/index.html
@@ -21,9 +21,9 @@
     -->
     <title>React App</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-    crossorigin="anonymous">
+    crossorigin="anonymous"> -->
   </head>
   <body>
     <noscript>
